--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class='container'>
     <header class="masthead text-center">
       <p align=”justify”>
-      We are a research lab in the International Research Agenda at Medical University of Gdańsk. We are interested in cellular responses to environmanmental stimulations in the context of their genetic, epigenetic and environmental background. We use high-throughput approaches to study cells transitions, cell-cell communications and chromatin transformations, particularly in cancer cells to provide diagnistic and therapeutic solutions. A key focus is the use of computational and experimental approaches to dissect, model, and interrogate changes in chromatin structure and gene expression regulations triggered by genetic modifications and/or extracellular stimulations. We pursue multi-disciplinary projects aiming to uncover patterns in chromatin and gene expression profiles relating to cell state.
+      We are a research lab in the International Research Agenda at Medical University of Gdańsk. We are interested in cellular responses to environmental stimulations in the context of their genetic, epigenetic and environmental background. We use high-throughput approaches to study cells transitions, cell-cell communications and chromatin transformations, particularly in cancer cells to provide diagnistic and therapeutic solutions. A key focus is the use of computational and experimental approaches to dissect, model, and interrogate changes in chromatin structure and gene expression regulations triggered by genetic modifications and/or extracellular stimulations. We pursue multi-disciplinary projects aiming to uncover patterns in chromatin and gene expression profiles relating to cell state.
       </p>
       
       <div >
