--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: default
       </p>
       
       <div >
-      <font size=4><a href="https://github.com/jakubmie"><i class="fa fa-github"></i> Mieczkowski Lab</a>&nbsp;&nbsp;&nbsp;
-      <a href="https://twitter.com/jakubmie"><i class="fa fa-twitter"></i> Mieczkowski Lab</a>&nbsp;&nbsp;&nbsp;
+      <font size=4><a href="https://github.com/jakubmie"><i class="fa fa-github"></i> mieczkowski Lab</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/jakubmie"><i class="fa fa-twitter"></i> mieczkowski Lab</a>&nbsp;&nbsp;&nbsp;
       <!--- <a href="mailto:jakubm@gumed.edu.pl"><i class="fa fa-envelope-o"></i> jakubm@gumed.edu.pl</a> --->
       </font>
       </div>
