Change publications; add research content; change phone number

--- a/research.html
+++ b/research.html
@@ -5,27 +5,57 @@ permalink: /research/
 ---
 
 <div class='container'>
-    <h3>Research</h3>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-lg-4">
-          <h2>Safari bug warning!</h2>
-          <p class="text-danger">As of v9.1.2, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
+  <p>
+  Our mission is to understand how genetic and epigenetic processes
+  prone, govern and limit cellular responses to the microenvironment and
+  pharmacological treatments. We aim to identify molecular features that
+  control the responses, using single-cell genomics and cellular models.
+  The long-term goal of our research is to identify cellular features of
+  clinical use that help to predict cellular response to particular
+  stimulation and to understand the regulatory processes that lead to the
+  response.
+  </p>
+
+  <!-- Example row of columns -->
+  <div class="row">
+  <div class="col-lg-4">
+    <h2>Drug response measured with single-cell and spatial transcriptomics</h2>
+    <p>One of the main challenges in medical biology is to identify associations between physiology and gene expression in specific cell types. This can only be achieved by understanding gene expression at the level of the single-cell because, in many systems, each cell has the capacity to express a unique set of genes. Therefore, each cell can be considered to be functionally distinct. A clearer understanding of gene expression in cancer cells at such a discrete level provides an opportunity to point known pharmaceutics with the most favorable outcome or to develop targeted drugs. We work on new methods to characterize the drug sensitivity of tumor cells based on single-cell and spatial transcriptomic data sets.  </p>
+    <!--p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p-->
+  </div>
+  <div class="col-lg-4">
+    <h2>Genomics affected by genetics </h2>
+    <p>Changes in genotype may affect genomic characteristics, like 3D structure, chromatin accessibility, or DNA methylation. Taken together the genetic and genomic features affect gene expression and represent the cellular state. We hypothesize that complex combinations of genomic features conditioned by genetic background can be used to represent the cellular state. The single-cell techniques allowed us to study molecular characteristics in individual cells, however. However new algorithms are needed to combine different molecular profiles and provide a broader view on the cellular processes. We use single-cell epigenetic and transcriptomic as well as genetic profiles to understand, quantify, and predict cellular state. </p>
+  </div>
+  <div class="col-lg-4">
+    <h2>Treatment response and chromatin profile</h2>
+    <p>The understanding of the molecular pathogenesis of cancer has increased over the years and as result personalized treatments became available. Recently pharmaceutics leading to changes in the epigenetic landscape gained attention as a promising targeted treatment, mostly to support other cancer therapies. One of the most successful strategies for combined cancer therapy is an increased response to immunotherapy by the application of targeted epigenetic treatment. Although epigenetic alterations are effective in the evaluation of disease risk, progression, or clinical response, a precise correspondence between epigenetic treatment and chromatin response is not established for the majority of pharmaceutics applied. Using primary cancer cells, we develop a framework for evaluating changes in chromatin accessibility. </p>
+  </div>
+  </div>
+
+  <h2>Funding</h2>
+  <p></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+        <a href="https://www.mariecuriealumni.eu/">
+          <img src="../images/funds/Marie_Curie_Alumni_Association_logo.jpg"
+           height="65" width="65" style="" class="img-fluid" >
+           </a>
       </div>
-    
+      <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+        <a href="https://www.ncn.gov.pl/">
+          <img src="../images/funds/ncn_logo.jpg" height="67"
+           width="67" style="" class="img-fluid img-thumbnails" >
+         </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+        <a href="https://www.fnp.org.pl/">
+          <img src="../images/funds/fnp_logo.png" height="75"
+           width="75" style="" class="img-fluid" >
+         </a>
+      </div>
+    </div>
+  </div>
+</div>
