Change: paper ref., research layout, news box frame

--- a/research.html
+++ b/research.html
@@ -18,17 +18,17 @@ permalink: /research/
   </p>
 
   <!-- Example row of columns -->
-  <div class="row">
-  <div class="col-lg-4">
+  <div class="">
+  <div class="">
     <h2>Drug response measured with single-cell and spatial transcriptomics</h2>
     <p>One of the main challenges in medical biology is to identify associations between physiology and gene expression in specific cell types. This can only be achieved by understanding gene expression at the level of the single-cell because, in many systems, each cell has the capacity to express a unique set of genes. Therefore, each cell can be considered to be functionally distinct. A clearer understanding of gene expression in cancer cells at such a discrete level provides an opportunity to point known pharmaceutics with the most favorable outcome or to develop targeted drugs. We work on new methods to characterize the drug sensitivity of tumor cells based on single-cell and spatial transcriptomic data sets.  </p>
     <!--p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p-->
   </div>
-  <div class="col-lg-4">
+  <div class="">
     <h2>Genomics affected by genetics </h2>
     <p>Changes in genotype may affect genomic characteristics, like 3D structure, chromatin accessibility, or DNA methylation. Taken together the genetic and genomic features affect gene expression and represent the cellular state. We hypothesize that complex combinations of genomic features conditioned by genetic background can be used to represent the cellular state. The single-cell techniques allowed us to study molecular characteristics in individual cells, however. However new algorithms are needed to combine different molecular profiles and provide a broader view on the cellular processes. We use single-cell epigenetic and transcriptomic as well as genetic profiles to understand, quantify, and predict cellular state. </p>
   </div>
-  <div class="col-lg-4">
+  <div class="">
     <h2>Treatment response and chromatin profile</h2>
     <p>The understanding of the molecular pathogenesis of cancer has increased over the years and as result personalized treatments became available. Recently pharmaceutics leading to changes in the epigenetic landscape gained attention as a promising targeted treatment, mostly to support other cancer therapies. One of the most successful strategies for combined cancer therapy is an increased response to immunotherapy by the application of targeted epigenetic treatment. Although epigenetic alterations are effective in the evaluation of disease risk, progression, or clinical response, a precise correspondence between epigenetic treatment and chromatin response is not established for the majority of pharmaceutics applied. Using primary cancer cells, we develop a framework for evaluating changes in chromatin accessibility. </p>
   </div>
