--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@ layout: default
       </header>
     </div>
     <div class="col-md-3">
+    <div class="" style="border: solid 1px #ccc ; border-radius: 5px;
+    padding: .5ex">
       <h3>Lab News</h3>
       <ul>
       <li>2020-09-17: A little website upgrade</li>
       </ul>
+    </div>
     </div>
   </div>
 </div>
